# hypermodern-python

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: hypermodern_test.console.imports  test.test_console.imports  test.test_wikipedia.imports
.pytype/pyi/hypermodern_test/: console.pyi  wikipedia.pyi
.pytype/pyi/test/: __init__.pyi  conftest.pyi  test_console.pyi  test_wikipedia.pyi
src/hypermodern_test/: console.py  wikipedia.py
src/hypermodern_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: conftest.py  test_console.py  test_wikipedia.py
